# argus-drm

./: .gitignore  CMakeLists.txt  README.md  argus_capture.cpp  argus_capture.h  build.sh  cmd.sh  gst_rtp.cpp  gst_rtp.h  lpr.cpp  lpr.cu  lpr.h  lpr.service  main.cpp  plate_reader.cpp  plate_reader.h  process_frame.cpp  process_frame.h  rtpip.txt  run.sh  setup.sh  udp_client.cpp  udp_client.h  video_encoder.cpp  video_encoder.h  yolo12.cpp  yolo12.cu  yolo12.h
utils/: cuproc.cpp  cuproc.h  sysio.cpp  sysio.h  trt_utils.cpp  trt_utils.h  vpi_utils.cpp  vpi_utils.h
utils/Argus/: CMakeLists.txt  EGLGlobal.cpp
utils/classes/: NvDrmRenderer.cpp
utils/cuda/: cudaCrop.cu  cudaCrop.h  cudaDeinterlace.cu  cudaDeinterlace.h  cudaDraw.cu  cudaDraw.h  cudaFont.cu  cudaFont.h  cudaGrayscale.cu  cudaGrayscale.h  cudaResize.cu  cudaResize.h  cudaWarp-affine.cu  cudaWarp.h
utils/gtk/: GuiElement.cpp
utils/include/: NvDrmRenderer.h
